app/deploy/manifest/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: staging-gosip-db
spec:
  selector:
    matchLabels:
      app: "staging-gosip-db"
  template:
    metadata:
      labels:
        app: staging-gosip-db
    spec:
      containers:
      - name: mysqldb-a7-staging
        image: mariadb:10.6.3
        resources:
          limits:
            memory: "128Mi"
            cpu: "128m"
          request:
            memory: "128Mi"
            cpu: "128m"
        ports:
        - containerPort: 3307
---
apiVersion: v1
kind: Service
metadata:
  name: mysqldb-a8
spec:
  selector:
    app: staging-gosip-db
  ports:
  - port: 3307
    targetPort: 3307
