app/deploy/manifest/dev-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gosip-app-dev
spec:
  selector:
    matchLabels:
      app: gosip-app-dev
  template:
    metadata:
      labels:
        app: gosip-app-dev
    spec:
      containers:
      - name: gosip-app-dev
        image: 10.8.60.123:5000/gosip-app:0.01
        resources:
          limits:
            memory: "128Mi"
            cpu: "128m"
          request:
            memory: "128Mi"
            cpu: "128m"
        ports:
        - containerPort: 10007
---
apiVersion: v1
kind: Service
metadata:
  name: gosip-dev-svc
spec:
  selector:
    app: gosip-app-dev
  ports:
  - name: gosip-dev-TCP
    protocol: TCP
    port: 10007
    targetPort: 10007
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gosip-staging-route
spec:
  host: gosip-app-dev.apps.lab.i3datacenter.my.id 
  port:
    targetPort: gosip-dev-TCP
  to:
    kind: Service
    name: gosip-dev-svc
